traces/bug_643.txt
examples++-mpi/parms_FreeFem.cpp:971: error: DEAD_STORE
  The value written to &displs (type int*) is never used.
Showing all 1 steps of the trace


examples++-mpi/parms_FreeFem.cpp:971:5: Write of unused value
969.   	   for(i=0;i<dm->comm->npro;i++) mapptr[i]--;
970.   	   int *displs, *perm; 
971.   	   PARMS_malloc(displs, nloc, int);PARMS_malloc(perm, n, int);
           ^
972.   	 
973.   	
